# ITcanteen

./: .gitignore  ITcanteen.code-workspace  README.md
.github/workflows/: backend.yaml
Discord-Bot/: .env  bot.py  main.py  not used.py  not used2.py  test.py
Discord-Bot/cogs/: Login_handler.py  item.py  order.py  ticket.py
backend/: .gitignore  MANUAL_th.md  backend.opam  data.sqlite  dune-project  go.mod  init.sql  main.go  mock.sql  package.json
backend/src/: dune  index.ts  log.ts  main.ml  main.ts  state.ts  types.ts
backend/src/routes/: login.ts  order.ts
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  global.css  history.tsx  layout.tsx  login.tsx  main.tsx  root.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: footer.tsx  nav.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/lib/: types.ts
frontend/src/app/login/: page.tsx
frontend/src/app/main/: page.tsx
frontend/src/app/test/: page.tsx
frontend/src/app/total/: page.tsx
frontend/src/components/: sidebar.tsx
frontend/src/lib/: api.ts  routes.tsx  store.ts  types.ts
frontend/src/lib/slices/: user.ts
