(lang dune 3.16)

(name backend)

(generate_opam_files true)

(source
 (github IT23-Organization/ITcanteen))

(authors "")

(maintainers "")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name backend)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml
          dune
          yojson
          ppx_deriving_yojson
          caqti
          caqti-driver-sqlite3
          dream
          lwt_ppx
          ppx_deriving)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
